--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,10 @@
     <string name="sign_up">Hesabınız yok mu?  <a href="www.ww.ww"> HESAP OLUŞTURMAK İÇİN TIKLAYIN</a> </string>
     <string name="err_msg_username">Kullanıcı Adı Boş Olamaz</string>
     <string name="err_msg_password">Şifre Boş Olamaz</string>
+
+    <string name="toolbar_title">Tif Ekranı</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 </resources>
