--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="err_msg_password">Şifre Boş Olamaz</string>
 
     <string name="toolbar_title">Tif Ekranı</string>
+    <string name="toolbar_title_demirbas">ONLIN TİF İŞLEMLERİ / Demirbaş Bilgisi</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
