--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,17 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
+    <string name="islemTuru0">İşem Türü Seçiniz...</string>
+    <string name="islemTuru1">İşlem 1</string>
+    <string name="islemTuru2">İşlem 2</string>
+    <string name="islemTuru3">İşlem 3</string>
+
+    <string-array name="arrayIslemTurleri">
+        <item></item>
+        <item>@string/islemTuru0</item>
+        <item>@string/islemTuru1</item>
+        <item>@string/islemTuru2</item>
+        <item>@string/islemTuru3</item>
+    </string-array>
+
 </resources>
