--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
 
     <string name="et_hint_username">Kullanıcı Adı</string>
     <string name="et_hint_password">Şifre</string>
-    <string name="btn_login">Giriş</string>
+    <string name="btn_login">GİRİŞ</string>
     <string name="sign_up">Hesabınız yok mu?  <a href="www.ww.ww"> HESAP OLUŞTURMAK İÇİN TIKLAYIN</a> </string>
     <string name="err_msg_username">Kullanıcı Adı Boş Olamaz</string>
     <string name="err_msg_password">Şifre Boş Olamaz</string>
