fragment isim değişikliği spinner değiştirme

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,12 +19,16 @@
     <string name="islemTuru1">TRANSFER</string>
     <string name="islemTuru2">HİBE</string>
     <string name="islemTuru3">HURDAYA AYIRMA</string>
+    <string name="islemTuru4">ZİMMET</string>
+    <string name="islemTuru5">ZİMMET İADE</string>
 
     <string name="islemTuru_prompt">İşem Türü Seçiniz...</string>
     <string-array name="arrayIslemTurleri">
         <item>@string/islemTuru1</item>
         <item>@string/islemTuru2</item>
         <item>@string/islemTuru3</item>
+        <item>@string/islemTuru4</item>
+        <item>@string/islemTuru5</item>
     </string-array>
 
 </resources>
